<resources>
    <string name="app_name">Exam Cracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">232291267519027</string>
    <string name="fb_login_protocol_scheme">fb232291267519027</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_test">My Test</string>
    <string name="my_course">My Course</string>
    <string name="estudy_material">EStudy Material</string>
    <string name="reports">Reports</string>
    <string name="my_wallet">My Wallet</string>
    <string name="impotent_document">Important Document</string>
    <string name="testimonial">Testimonial</string>
    <string name="buy_courses">Buy Courses</string>
    <string name="buy_test_series">Buy Test Series</string>
    <string name="inbox">Inbox</string>
    <string name="news">News</string>
    <string name="bookmark">Bookmark</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="test_series">Test Series</string>
    <string name="courses">Courses</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="more">more</string>
    <string name="notification">Notification</string>
    <string name="language">Language</string>
    <string name="night_mode">Night Mode</string>
    <string name="testimonials">TESTIMONIALS</string>
    <string name="features">FEATURES</string>
    <string name="see_more">More</string>
    <string name="free_packages">FREE PACKAGES</string>
    <string name="paid_packages">PAID PACKAGES</string>
    <string name="latest_packages">LATEST PACKAGES</string>
    <string name="popular_packages">POPULAR PACKAGES</string>
    <string name="package_name">Package Name</string>
    <string name="full_test">Full Length</string>
    <string name="practice_test">Practice</string>
    <string name="sectional_test">Sectional</string>
    <string name="buy">Buy</string>
    <string name="full_name">Full Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="qualification">Qualification</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="save">SAVE</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="message">Message</string>
    <string name="enter_your_message_for_us_here_we_will_get_back_to_you_within_2_business_days">Enter your message for us here. We will get back to you within 2 business days.</string>
    <string name="send">SEND</string>
    <string name="contacts"><u><b>Contacts</b></u></string>
    <string name="exam_cleared">Exam Cleared</string>
    <string name="testimonial_must_be_30_to_70_character">Testimonial (Must be 30 to 70 character)</string>
    <string name="submit">SUBMIT</string>
    <string name="Rs">\u20B9</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="total">Total</string>
    <string name="rs">Rs.</string>
    <string name="discount">Discount</string>
    <string name="grand_total">Grand Total</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="make_payment">Make Payment</string>
    <string name="important_instructions">IMPORTANT INSTRUCTIONS</string>
    <string name="Coupon"><b>Coupon :</b> Please verify your coupon code before entering it. Specially check for uppercase, lowercase and numeric while entering.</string>
    <string name="BuyOnline"><b>Buy Online :</b> Pay money online with secured instamojo gateway and get your package.</string>
    <string name="number_of_test">Number of Test</string>
    <string name="sectional_tests">Sectional Tests</string>
    <string name="highlights">Highlights</string>
    <string name="practice_tests">Practice Tests</string>
    <string name="full_length_tests">Full Length Tests</string>
    <string name="total_test">Total Test</string>
    <string name="full_length">Full Length</string>
    <string name="practice">Practice</string>
    <string name="sectional">Sectional</string>
    <string name="price">Price</string>
    <string name="buy_now">Buy Now</string>
    <string name="all">All</string>
    <string name="name">Name</string>
    <string name="student">Student</string>
    <string name="welcome">Welcome,</string>
    <string name="login">Login</string>
    <string name="welcome_guest">Welcome Guest,</string>
    <string name="old_password">Old Password</string>
    <string name="enter_old_password">Enter Old Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change">CHANGE</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="reset">RESET</string>
    <string name="similar_packages">SIMILAR PACKAGES</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="register_now">Register Now</string>
    <string name="sign_up">SIGN UP</string>
    <string name="i_agree_to">I agree to</string>
    <string name="terms_amp_conditions"><![CDATA[ terms & conditions]]></string>
    <string name="action_deep_link">
        com.delaroystudios.appinvites.DEEP_LINK_ACTION
    </string>
    <string name="invite">Send invitations!</string>
    <string name="welcomes">App Invite\nQuickstart</string>
    <string name="referrer_hint">Deep link not provided</string>
    <string name="deep_link_default">Deep link not set</string>
    <string name="invitation_id_default">Invitation ID not set</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invitation_title">Send App Invite Quickstart Invitation</string>
    <string name="invitation_message">This app is terrific, give it a try and get $5 off!</string>
    <string name="invitation_deep_link">http://example.com/offer/five_dollar_offer</string>
    <string name="invitation_custom_image">https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png</string>
    <string name="invitation_cta">Install!</string>
    <string name="invitation_subject">Try this great app!</string>
    <string name="deep_link_fmt" formatted="false">Deep Link: %s</string>
    <string name="invitation_id_fmt" formatted="false">Invitation ID: %s</string>
    <string name="sent_invitations_fmt" formatted="false">Sent %d invitations</string>
    <string name="send_failed">Sending invitations failed</string>
    <string name="invite_dialog_title">You got an invitation!</string>
    <string name="google_play_services_error">Google Play Services Error</string>
    <string name="custom_invite">Custom Invite</string>
    <string name="profile">Profile</string>
    <string name="instruction">Instruction</string>
    <string name="question_paper">Question Paper</string>
    <string name="icone">Icone</string>
    <string name="number_prefix">.</string>
    <string name="_0">0</string>
    <string name="sr_no">Sr.No.</string>
    <string name="test_name">Test Name</string>
    <string name="attempt">Attempt</string>
    <string name="r_q">R.Q</string>
    <string name="w_q">W.Q</string>
    <string name="l_q">L.Q</string>
    <string name="max">Max.</string>
    <string name="t_m">T.M</string>
    <string name="completed_date">Completed Date</string>
    <string name="solutions">Solutions</string>
    <string name="test_detail">Test Detail</string>
    <string name="test_subject">Test Subject</string>
    <string name="packages">Package</string>
    <string name="test_status">Test Status</string>
    <string name="published_date">Published Date</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="validity_in_month">Validity(in month)</string>
    <string name="purchasing_date">Purchasing Date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="start_test">Start Test</string>
    <string name="general_instructions">General Instructions</string>
    <string name="_4_you_can_click_on_the_arrow_which_appears_to_the_left_of_question_palette_to_collapse_the_question_palette_thereby_maximizing_the_question_window_to_view_the_question_palette_again_you_can_click_on_which_appears_on_the_right_side_of_question_window"><![CDATA[4. You can click on the \">\" arrow which appears to the left of question palette to collapse the question palette thereby maximizing the question window. To view the question palette again, you can click on \"<\" which appears on the right side of question window.]]></string>
    <string name="_1_total_duration_of_examination_is">1. Total duration of examination is</string>
    <string name="minutes">minutes.</string>
    <string name="_2_the_clock_has_been_set_at_the_server_countdown_timer_in_the_top_right_corner_of_screen_will_display_the_remaining_time_available_for_you_to_complete_the_examination_when_the_timer_reaches_zero_the_examination_will_end_by_itself_you_will_not_be_required_to_end_or_submit_your_examination">2. The clock has been set at the server. Countdown timer in the top right corner of screen will display the remaining time available for you to complete the examination. When the timer reaches zero.the examination will end by itself. You will not be required to end or submit your examination.</string>
    <string name="_3_the_question_palette_displayed_on_the_right_side_of_screen_will_show_the_status_of_each_question_using_one_of_the_following_symbols">3. The Question Palette displayed on the right side of screen will show the status of each question using one of the following symbols:</string>
    <string name="you_have_not_visited_the_question_yet"><b>You have not visited the question yet.</b></string>
    <string name="you_have_not_answered_the_question"><b>You have not answered the question.</b></string>
    <string name="you_have_answered_the_question"><b>You have answered the question.</b></string>
    <string name="you_have_marked_the_question_for_review"><b>You have marked the question for review.</b></string>
</resources>