<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_my_test"
            android:icon="@drawable/ic_menu_test_series"
            android:title="@string/my_test" />
        <item
            android:id="@+id/nav_my_course"
            android:icon="@drawable/ic_menu_course"
            android:title="@string/my_course" />
        <item
            android:id="@+id/nav_e_study_material"
            android:icon="@drawable/ic_menu_study"
            android:title="@string/estudy_material" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_menu_report"
            android:title="@string/reports" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/ic_menu_wallet"
            android:title="@string/my_wallet" />
        <item
            android:id="@+id/nav_important_document"
            android:icon="@drawable/ic_menu_document"
            android:title="@string/impotent_document" />
        <item
            android:id="@+id/nav_testimonial"
            android:icon="@drawable/ic_menu_testimonial"
            android:title="@string/testimonial" />
        <item
            android:id="@+id/nav_buy_test_series"
            android:icon="@drawable/ic_menu_test_series"
            android:title="@string/buy_test_series" />
        <item
            android:id="@+id/nav_buy_courses"
            android:icon="@drawable/ic_menu_course"
            android:title="@string/buy_courses" />
    </group>

</menu>
