<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    tools:context=".Fragment.ChangePasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_password"
            android:layout_gravity="start"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        <EditText
            android:id="@+id/edtOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edit_text"
            android:padding="10dp"
            android:inputType="textPassword"
            android:hint="@string/enter_old_password"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        <EditText
            android:id="@+id/edtNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edit_text"
            android:padding="10dp"
            android:inputType="textPassword"
            android:hint="@string/enter_new_password"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edit_text"
            android:padding="10dp"
            android:inputType="textPassword"
            android:hint="@string/confirm_new_password"/>

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change"
            android:padding="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    </LinearLayout>

</ScrollView>