<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/scrollView"
    tools:context=".Fragment.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:layout_margin="10dp"
            android:contentDescription="@string/icone" />

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edit_text"
            android:padding="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:inputType="text"
            android:hint="@string/user_name"/>

        <EditText
            android:id="@+id/edtEmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edit_text"
            android:padding="12dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="15dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edit_text"
            android:padding="12dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="15dp"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <EditText
            android:id="@+id/edtPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edit_text"
            android:padding="12dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="15dp"
            android:inputType="phone"
            android:hint="@string/mobile_number"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:padding="12dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="15dp">

            <CheckBox
                android:id="@+id/chkAgreeTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_agree_to"
                android:textColor="@color/colorBlack"
                android:gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

            <TextView
                android:id="@+id/txtAgreeTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_amp_conditions"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="20dp">

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="0.5dp"
                android:background="@color/colorGrayDark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>

            <View
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="0.5dp"
                android:background="@color/colorGrayDark"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_vertical|center_horizontal">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/btnSignInFB"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btnFb"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_facebook_button"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="5dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:drawableStart="@drawable/facebook_logo"
                android:onClick="onClick"
                android:text="@string/facebook"
                android:textAllCaps="false"
                android:textColor="#3b5998"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/btnSignInGoogle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btnGoogle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_google_button"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="0dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:drawableStart="@drawable/google_logo"
                android:text="@string/google"
                android:textAllCaps="false"
                android:textColor="#dd4b39"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>