<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    tools:context=".Fragment.TestimonialFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:layout_gravity="start"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edit_text"
            android:padding="10dp"
            android:inputType="textPersonName"
            android:hint="@string/full_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edit_text"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exam_cleared"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        <EditText
            android:id="@+id/edtExamCleared"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edit_text"
            android:padding="10dp"
            android:inputType="text"
            android:hint="@string/exam_cleared"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/courses"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        <EditText
            android:id="@+id/edtCourses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edit_text"
            android:padding="10dp"
            android:inputType="text"
            android:hint="@string/courses"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/testimonial"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        <EditText
            android:id="@+id/edtTestimonial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edit_text"
            android:padding="10dp"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:lines="6"
            android:hint="@string/testimonial_must_be_30_to_70_character"/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:padding="12dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

    </LinearLayout>

</ScrollView>