<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    tools:context=".Fragment.StudentEnquiryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:layout_gravity="start"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        <EditText
            android:id="@+id/edtTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edit_text"
            android:padding="10dp"
            android:inputType="textMultiLine"
            android:hint="@string/full_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        <EditText
            android:id="@+id/edtSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edit_text"
            android:padding="10dp"
            android:inputType="text"
            android:hint="@string/subject"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_gravity="start"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"/>
        <EditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edit_text"
            android:padding="10dp"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:lines="6"
            android:hint="@string/description"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:weightSum="2"
           android:layout_marginTop="15dp"
           android:layout_marginBottom="30dp">

           <Button
               android:id="@+id/btnSend"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="@string/send"
               android:padding="12dp"
               android:layout_marginStart="0dp"
               android:layout_marginEnd="6dp"
               android:background="@color/colorPrimary"
               android:textColor="@color/colorWhite"
               android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

           <Button
               android:id="@+id/btnReset"
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:text="@string/reset"
               android:padding="12dp"
               android:layout_marginStart="6dp"
               android:layout_marginEnd="0dp"
               android:background="@color/colorPrimary"
               android:textColor="@color/colorWhite"
               android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

       </LinearLayout>

    </LinearLayout>

</ScrollView>